auth access and refresh token logic implementation

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5100
-SECRET="secret-key"
-REFRESH_SECRET="refresh-secret-key"
-EXPIRE_JWT="2d"
-EXPIRE_REFRESH_JWT="7d"
+SECRET="perfectaccessstrongkey"
+REFRESH_SECRET="perfectrefreshstrongkey"
+EXPIRE_JWT="2h"
+EXPIRE_REFRESH_JWT="1d"
