auth access and refresh token logic implementation

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5100
-SECRET="perfectaccessstrongkey"
-REFRESH_SECRET="perfectrefreshstrongkey"
+SECRET="gM5fxxVfoH7TAOAI4mHkejgB7vuZJfYz0vG9ELbpxLo"
+REFRESH_SECRET="7G0fHSIzqZkF-ISX-EjVh7asf44WtthzC3mKmsbck88"
 EXPIRE_JWT="2h"
 EXPIRE_REFRESH_JWT="1d"
