service and environment fix

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SECRET="8259CA2F979D73A4F244C5431DC45"
 REFRESH_SECRET="C39962AE64DF577C4A39AAF9389BC"
 EXPIRE_JWT="2h"
 EXPIRE_REFRESH_JWT="1d"
+GMAIL_PASS="lmjewzmuoentgyzk\n"
