--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo",
+  "name": "al-narcis",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,7 +25,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "1.2.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -34,7 +34,7 @@
     "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "0.13.2",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.0",
     "nodemailer": "^6.9.1",
