--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/mapped-types": "1.2.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.3",
     "@nestjs/serve-static": "^3.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/nodemailer": "^6.4.7",
@@ -36,7 +36,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "0.13.2",
     "dotenv": "^16.0.3",
+    "minio": "^8.0.5",
     "mongoose": "^6.8.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
