--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "0.13.2",
     "dotenv": "^16.0.3",
+    "ioredis": "^5.7.0",
     "minio": "^8.0.5",
     "mongoose": "^6.8.0",
     "multer": "^2.0.2",
