--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   mongodb:
+    container_name: mongodb
     image: mongo:latest
     env_file:
       - .env
@@ -14,6 +15,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: r4m4z4n94!
 
   api:
+    container_name: al_narcis_api
     build: .
     ports:
       - ${PORT}:${PORT}
@@ -36,6 +38,7 @@ services:
       - minio_data:/data
 
   redis:
+    container_name: redis
     image: redis:7
     ports:
       - "6379:6379"
