--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   api:
     build:
@@ -11,4 +9,6 @@ services:
       - "5310:5310"
     env_file:
       - .env
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
     restart: always
