--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/swagger": "^6.3.0",
     "@types/bcrypt": "^5.0.0",
     "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
@@ -46,7 +47,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
