--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "0.13.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.0.3",
     "ioredis": "^5.7.0",
-    "md5": "^2.3.0",
     "minio": "^8.0.5",
     "mongoose": "^6.8.0",
     "multer": "^2.0.2",
